# ufw-report

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: actual-state.md  lean-canvas.md  risk-analysis.md  wbs.md
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  output.rs  parser.rs  tui.rs
src/cli/: args.rs  config.rs  mod.rs
src/config/: app_config.rs  mod.rs
src/core/: cache.rs  mod.rs  parser.rs  range.rs
src/domain/: aggregation.rs  mod.rs  reports.rs
src/models/: aggregate.rs  entry.rs  mod.rs
src/output/: csv.rs  json.rs  mod.rs
src/parser/: date_utils.rs  line.rs  mod.rs  range.rs  reports.rs
src/tui/: app.rs  daily.rs  events.rs  header.rs  hourly.rs  mod.rs  overview.rs  raw.rs  status.rs
src/tui/tabs/: daily.rs  daily_view.rs  hourly.rs  mod.rs  overview.rs  raw.rs
tests/: config_tests.rs  models_tests.rs  output_tests.rs  parser_tests.rs
